--- a/index.html
+++ b/index.html
@@ -70,16 +70,29 @@
         ev.stopImmediatePropagation();
       }
 
+      function fullscreenHandler(){
+        if(window.innerWidth > window.innerHeight && window.innerHeight == window.screen.width && !fullscreen){
+          processFullscreen()
+        } else if(fullscreen) {
+          resetFullscreen();
+        }
+        screen.innerHTML = `screen: w ${window.screen.width} : h ${window.screen.height}`;
+        viewport.innerHTML = `viewport: w ${window.innerWidth} : h ${window.innerHeight}`;
+        aHeight.innerHTML = `available: w ${window.screen.availWidth } : h ${window.screen.availHeight }`;
+      }
+
       let fullscreen = false;
 
 
       function resetFullscreen (){
+        alert('RESET FULLSCREEN');
         // alert('RESET');
-        fullscreen = false;
-        document.body.style.height = `${window.innerHeight * 2}px`;
-        window.scroll({top : 0});
-        info.innerText = 'SWIPE UP';
-        window.removeEventListener('touchmove', preventScroll);
+        // window.removeEventListener('scroll', fullscreenHandler);
+        // fullscreen = false;
+        // document.body.style.height = `${window.innerHeight * 2}px`;
+        // window.scroll({top : 0});
+        // info.innerText = 'SWIPE UP';
+        // window.removeEventListener('touchmove', preventScroll);
       }
 
       function processFullscreen(){
@@ -91,16 +104,23 @@
       }
 
 
+      function initFullscreenActivator(){
+        alert('PREPARE FULLSCREEN');
+        // window.addEventListener('scroll', fullscreenHandler);
+      }
+
+
 
       let orientation = window.innerWidth > window.innerHeight ? LANDSCAPE : PORTRAIT;
 
+      //check device orientation
       window.addEventListener('resize', () => {
         if(window.innerWidth <= window.innerHeight && orientation == LANDSCAPE){
           orientation = PORTRAIT;
-          alert('PORTRAIT');
+          resetFullscreen();
         } else if(window.innerWidth > window.innerHeight && orientation == PORTRAIT){
           orientation = LANDSCAPE;
-          alert('LANDSCAPE');
+          initFullscreenActivator();
         }
       });
 
@@ -117,16 +137,7 @@
       // }, false);
 
 
-      window.addEventListener('scroll', () => {
-        if(window.innerWidth > window.innerHeight && window.innerHeight == window.screen.width && !fullscreen){
-          processFullscreen()
-        } else if(fullscreen) {
-          resetFullscreen();
-        }
-        screen.innerHTML = `screen: w ${window.screen.width} : h ${window.screen.height}`;
-        viewport.innerHTML = `viewport: w ${window.innerWidth} : h ${window.innerHeight}`;
-        aHeight.innerHTML = `available: w ${window.screen.availWidth } : h ${window.screen.availHeight }`;
-      });
+
     }
 
 
