--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <p class="dn" id="screen"></p>
     <p class="dn" id="aheight"></p>
     <p class="dn" id="safari"></p>
-    <p id="info">SWIPE UP</p>
+    <p id="info"></p>
     <p class="dn" id="orientation"></p>
 </div>
 
 <script>
-    
+
     window.addEventListener('load', () => {
       const viewport = document.getElementById('viewport');
       const screen = document.getElementById('screen');
@@ -150,7 +150,7 @@
       }
 
     });
-    
+
 
 </script>
 
