--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
         function initFullscreenActivator(){
-          // alert('PREPARE FULLSCREEN');
+          alert('PREPARE FULLSCREEN');
           document.body.style.height = `${window.innerHeight * 2}px`;
           window.scroll({top : 0});
           info.innerText = 'SWIPE UP';
