--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
         function resetFullscreen (){
-          // alert('RESET FULLSCREEN');
+          alert('RESET FULLSCREEN');
           document.body.style.height = '100%';
           info.innerText = 'SWIPE UP';
           window.scroll({top : 0});
