--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           if(window.innerWidth > window.innerHeight && window.innerHeight == window.screen.width && !fullscreen){
             processFullscreen()
           } else if(fullscreen) {
-            resetFullscreen();
+            resetFullscreen('fullscreen handler');
             orientationHandler();
           }
           screen.innerHTML = `screen: w ${window.screen.width} : h ${window.screen.height}`;
@@ -128,7 +128,7 @@
         function orientationHandler(){
           if(window.innerWidth <= window.innerHeight && orientation != PORTRAIT){
             orientation = PORTRAIT;
-            resetFullscreen();
+            resetFullscreen('orientation');
             info.innerText = 'TURN ON LANDSCAPE';
           } else if(window.innerWidth > window.innerHeight && orientation != LANDSCAPE){
             orientation = LANDSCAPE;
