--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           window.scroll({top : 0});
           window.removeEventListener('scroll', fullscreenHandler);
           window.removeEventListener('touchmove', preventScroll);
-          // fullscreen = false;
+          fullscreen = false;
           // document.body.style.height = `${window.innerHeight * 2}px`;
           // window.scroll({top : 0});
           // info.innerText = 'SWIPE UP';
