--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
         function resetFullscreen (arg){
-          alert('RESET FULLSCREEN ' + arg);
+          // alert('RESET FULLSCREEN ' + arg);
           document.body.style.height = '100%';
           info.innerText = 'SWIPE UP';
           window.scroll({top : 0});
@@ -116,7 +116,7 @@
 
 
         function initFullscreenActivator(){
-          alert('PREPARE FULLSCREEN');
+          // alert('PREPARE FULLSCREEN');
           document.body.style.height = `${window.innerHeight * 2}px`;
           window.scroll({top : 0});
           info.innerText = 'SWIPE UP';
